// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridImage /> Should render with default values 1`] = `
.c5 {
  font-size: 1.6rem;
}

.c2 .c4 {
  margin-bottom: 6.4rem;
}

.c6 {
  counter-reset: grid-counter;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
}

.c7 {
  overflow: hidden;
}

.c8 {
  width: 100%;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c8:hover {
  -webkit-transform: scale(1.2) rotate(5deg);
  -ms-transform: scale(1.2) rotate(5deg);
  transform: scale(1.2) rotate(5deg);
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

.c3 {
  color: #0A1128;
  font-size: 5.6rem;
  text-transform: uppercase;
}

@media (max-width:768px) {
  .c3 {
    font-size: 4.0rem;
  }
}

<div>
  <div
    class="c0"
    id="id-8304-766239170203"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Hello GridImage
        </h2>
        <div
          class="c4 c5"
        >
          Veniam velit magna nulla ex veniam sunt est.
    Consectetur ea aliquip do in. Qui amet non mollit elit proident
    aute adipisicing labore cillum. Non labore commodo minim labore
    ad sint eiusmod mollit anim cillum culpa officia cupidatat
    Lorem. Duis excepteur non ut consectetur adipisicing veniam sint.
    Aliquip ex excepteur non deserunt Lorem. Eu excepteur irure
    labore aliquip non aute sint sunt elit laboris occaecat ad veniam.
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <img
              alt="Image 1"
              class="c8"
              src="https://source.unsplash.com/random/800x800?r=1"
            />
          </div>
          <div
            class="c7"
          >
            <img
              alt="Image 2"
              class="c8"
              src="https://source.unsplash.com/random/800x800?r=2"
            />
          </div>
          <div
            class="c7"
          >
            <img
              alt="Image 3"
              class="c8"
              src="https://source.unsplash.com/random/800x800?r=3"
            />
          </div>
          <div
            class="c7"
          >
            <img
              alt="Image 4"
              class="c8"
              src="https://source.unsplash.com/random/800x800?r=4"
            />
          </div>
          <div
            class="c7"
          >
            <img
              alt="Image 5"
              class="c8"
              src="https://source.unsplash.com/random/800x800?r=5"
            />
          </div>
          <div
            class="c7"
          >
            <img
              alt="Image 6"
              class="c8"
              src="https://source.unsplash.com/random/800x800?r=6"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GridImage /> Should render with no grid 1`] = `
.c5 {
  font-size: 1.6rem;
}

.c2 .c4 {
  margin-bottom: 6.4rem;
}

.c6 {
  counter-reset: grid-counter;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
}

.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  max-width: 120rem !important;
  margin: 0 auto;
  padding: 3.2rem;
  width: 100%;
}

.c3 {
  color: #0A1128;
  font-size: 5.6rem;
  text-transform: uppercase;
}

@media (max-width:768px) {
  .c3 {
    font-size: 4.0rem;
  }
}

<div>
  <div
    class="c0"
    id="id-8037-242858344953"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2
          class="c3"
        >
          Hello GridImage
        </h2>
        <div
          class="c4 c5"
        >
          Veniam velit magna nulla ex veniam sunt est.
    Consectetur ea aliquip do in. Qui amet non mollit elit proident
    aute adipisicing labore cillum. Non labore commodo minim labore
    ad sint eiusmod mollit anim cillum culpa officia cupidatat
    Lorem. Duis excepteur non ut consectetur adipisicing veniam sint.
    Aliquip ex excepteur non deserunt Lorem. Eu excepteur irure
    labore aliquip non aute sint sunt elit laboris occaecat ad veniam.
        </div>
        <div
          class="c6"
        />
      </div>
    </div>
  </div>
</div>
`;
